fix adv search ui form alignments

--- a/app/assets/stylesheets/common/search.scss
+++ b/app/assets/stylesheets/common/search.scss
@@ -8,9 +8,6 @@
   .search-terms {
   }
 
-  select.short {
-    width: auto;
-  }
   .dropdown.dropdown-lg .dropdown-menu {
     margin-top: -1px;
     padding: 6px 20px;
@@ -26,13 +23,9 @@
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
   }
-  .btn-group .form-horizontal .btn[type="submit"] {
+  .btn-group .btn[type="submit"] {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
-  }
-  .form-horizontal .form-group {
-    margin-left: 0;
-    margin-right: 0;
   }
   .form-group .form-control:last-child {
     border-top-left-radius: 4px;
@@ -46,5 +39,63 @@
     .dropdown.dropdown-lg .dropdown-menu {
       min-width: 500px;
     }
+  }
+}
+
+.adv-search {
+  .short {
+    width: auto;
+  }
+
+  .form-group.row {
+    font-size: 0;
+  }
+
+  .form-group.row > * {
+    float: none;
+    display: inline-block;
+    font-size: 14px;
+  }
+
+  .form-group {
+    margin-left: 0;
+    margin-right: 0;
+
+    label.inline {
+      float: left;
+      padding-right: 15px;
+    }
+
+    .col-xs-5 {
+      padding: 0;
+    }
+
+    .col-xs-5.right {
+      padding-left: 15px;
+    }
+
+    .col-xs-5.right.wide {
+      padding-left: 45px;
+    }
+
+    .col-xs-5.inline,
+    .col-xs-5.inline label,
+    .col-xs-5.inline input {
+      display: inline-block;
+      width: auto;
+    }
+
+    .col-xs-5.inline label {
+      float: left;
+      padding-right: 15px;
+    }
+
+    .col-xs-5.inline {
+      vertical-align: bottom;
+    }
+  }
+
+  #adv-search-button {
+    float: right;
   }
 }
